Change place again.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <a href="https://www.eventbrite.fr/e/billets-lyonjs-21-angularjs-from-scratch-11083885199?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11083885199" alt="Eventbrite - LyonJS #21 - AngularJS from scratch" /></a>
       <br>
       <br><a href="#where">Attention, changement de lieu!
-      <br>Toujours à l'Epitech mais un peu plus loin dans la rue Paul Bert.</a>
+      <br>Toujours à l'Epitech mais dans le bâtiment en face.</a>
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>-->
     </h1>
   </header>
@@ -91,9 +91,9 @@
   </article>
   <article id="where">
     <h2>Le lieu : Epitech</h2>
-    <a href="https://www.google.fr/maps/place/156+Rue+Paul+Bert/@45.7569796,4.8568653,17z/data=!4m2!3m1!1s0x47f4ea644203652f:0xd3c65f499a2fb92f">Epitech Lyon, 156 Rue Paul Bert, 69003 Lyon</a>
+    <a href="https://goo.gl/maps/EQu12">Epitech Lyon, 85 Boulevard Marius Vivier Merle, 69003 Lyon</a>
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2783.7089971948003!2d4.8568653!3d45.7569796!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea644203652f%3A0xd3c65f499a2fb92f!2s156+Rue+Paul+Bert!5e0!3m2!1sfr!2sfr!4v1395673105501" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.7956727332094!2d4.85906049999999!3d45.7552421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea6521f25b95%3A0x8e28a3d60c1615f3!2s85+Boulevard+Marius+Vivier+Merle!5e0!3m2!1sen!2sfr!4v1395855139543" width="100%" height="450" frameborder="0" style="border:0"></iframe>
     <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed"></iframe>
     <br />
     <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a>
