Update for may session

--- a/index.html
+++ b/index.html
@@ -57,43 +57,32 @@
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"> --&gt; <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;"> ?
       <br><a href="mailto:lyonjs@googlegroups.com" title="Mail"><small>Changement de logo, qu'en pensez-vous ?</small></a>
       <br>
-      <br>--&gt; Jeudi 3 Avril à 19h15 &lt;--
+      <br>--&gt; Lundi 12 Mai à 19h15 &lt;--
       <br>
-      <a href="https://www.eventbrite.fr/e/billets-lyonjs-21-angularjs-from-scratch-11083885199?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11083885199" alt="Eventbrite - LyonJS #21 - AngularJS from scratch" /></a>
+      <a href="https://www.eventbrite.fr/e/billets-lyonjs-22-oh-shit-i-didnt-mean-to-do-that-11568057371" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11568057371" alt="Eventbrite - LyonJS #22 - Oh shit ! I didn't mean to do that." /></a>
       <br>
-      <br><a href="#where">Attention, changement de lieu!
-      <br>Toujours à l'Epitech mais dans le bâtiment en face.</a>
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>AngularJS from scratch</h2>
+    <h2>Oh shit ! I didn't mean to do that.</h2>
     <div class="row-fluid">
-      <div class="span2">
-        <span class="centered">Olivier Huber</span>
-        <img src="https://pbs.twimg.com/profile_images/420649738854084608/ilj2U_BH.jpeg" alt="Olivier HUBER" class="logo" />
-        <a href="https://twitter.com/olivierhuber" class="centered">Twitter</a>
-        <a href="https://github.com/olivierhuber" class="centered">GitHub</a>
-      </div>
-      <div class="span2">
-        <span class="centered">Matthieu Lux</span>
-        <img src="https://pbs.twimg.com/profile_images/821941422/swiip.jpg" alt="Matthieu LUX" class="logo" />
-        <a href="https://twitter.com/Swiip" class="centered">Twitter</a>
-        <a href="https://github.com/Swiip" class="centered">GitHub</a>
+      <div class="span4">
+        <img src="https://pbs.twimg.com/profile_images/1777939560/gravatar.png" alt="Francois Poizat" class="logo" />
+        <a href="https://twitter.com/FranzP" class="centered">Twitter</a>
+        <a href="https://github.com/FranzPoize" class="centered">GitHub</a>
+        <a href="http://franzp.fr/" class="centered">http://franzp.fr/</a>
       </div>
       <div class="span8 lead description">
-        <h3>Nous vous proposons de réécrire AngularJS de zero avec nous.<br>Rien de tel pour démystifier le framework !</h3>
-        <p>On a tous vu une présentation d’AngularJS montrant la magie des bindings et des directives. Oui, mais comment ça marche ? Rien de mieux pour le comprendre que de le construire étape par étape. C’est finalement avec assez peu de code et un code très intéressant à détailler que les principaux mécanismes d’AngularJS apparaissent. Avant la fin de la séance, binding, directives, templates, tout fonctionne.</p>
-        <p>Depuis plus d’un an, dans la communauté AngularJS en France, les présentations sur le framework ont toutes été données.</p>
-        <p>Mais comment démystifier le côté magique d’AngularJS. Comment aborder avec des auditeurs qui ne sont pas forcément spécialistes du JavaScript, les mécanismes interne du framework ? Nous avons mis au point une base de code qui permet, en partant de zero, de reproduire les mécanismes principales des scopes d’Angular, du Dirty Checking, du binding et enfin de la compilation du DOM afin d’interpréter les directives présentes dans le code HTML.</p>
+        <p>Nous parlerons des principes de base du undo et des exemples dans angular.js</p>
       </div>
     </div>
   </article>
   <article id="where">
     <h2>Le lieu : Epitech</h2>
-    <a href="https://goo.gl/maps/EQu12">Epitech Lyon, 85 Boulevard Marius Vivier Merle, 69003 Lyon</a>
+    <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&amp;hl=fr&amp;cid=2934105339601756812">Epitech Lyon, 86 Boulevard Marius Vivier Merle, 69003 Lyon</a>
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.7956727332094!2d4.85906049999999!3d45.7552421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea6521f25b95%3A0x8e28a3d60c1615f3!2s85+Boulevard+Marius+Vivier+Merle!5e0!3m2!1sen!2sfr!4v1395855139543" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe>
     <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed"></iframe>
     <br />
     <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a>
@@ -103,6 +92,10 @@
   <article id="previous">
     <h2>Les sessions précédentes</h2>
     <ul>
+      <li>
+        <h3>Jeudi 3 avril 2014</h3>
+        AngularJS from scratch par Matthieu Lux (<a href="https://twitter.com/Swiip">@Swiip</a>) et Olivier Huber (<a href="https://twitter.com/olivierhuber">@olivierhuber</a>)
+      </li>
       <li>
         <h3>Mardi 11 février 2014</h3>
         <a href="http://slid.es/rebolon/meteorjs-first-walk">Découverte de MeteoJS</a> par Benjamin Richard (<a href="https://twitter.com/rebolon">@rebolon</a>, <a href="http://about.me/benjamin.richard">Site</a>, <a href="http://t.co/ASbxJSb5Pg">Sources</a>)
