--- a/index.html
+++ b/index.html
@@ -54,55 +54,80 @@
 
   <header id="event">
     <h1>
-      <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"> --&gt; <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;"> ?
-      <br><a href="mailto:lyonjs@googlegroups.com" title="Mail"><small>Changement de logo, qu'en pensez-vous ?</small></a>
+      <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;">
       <br>
-      <br>--&gt; Lundi 12 Mai à 19h15 &lt;--
+      <br>--&gt; Mardi 17 Juin à 19h15 &lt;--
       <br>
-      <a href="https://www.eventbrite.fr/e/billets-lyonjs-22-oh-shit-i-didnt-mean-to-do-that-11568057371" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11568057371" alt="Eventbrite - LyonJS #22 - Oh shit ! I didn't mean to do that." /></a>
-      <br>
+      <a href="https://www.eventbrite.fr/e/billets-lyonjs-23-reactjs-realtime-coverage-callback-hell-build-tools-par-cozycloud-11891978227?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11891978227" alt="Eventbrite - LyonJS #23 ReactJS, Realtime, Coverage, Callback Hell &amp; Build Tools par CozyCloud" /></a>
+      <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-22-oh-shit-i-didnt-mean-to-do-that-11568057371" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11568057371" alt="Eventbrite - LyonJS #22 - Oh shit ! I didn't mean to do that." /></a>-->
+      <!--<br>-->
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>Oh shit ! I didn't mean to do that.</h2>
+    <h2>ReactJS, Realtime, Coverage, Callback Hell & Build Tools par CozyCloud</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/1777939560/gravatar.png" alt="Francois Poizat" class="logo" />
-        <a href="https://twitter.com/FranzP" class="centered">Twitter</a>
-        <a href="https://github.com/FranzPoize" class="centered">GitHub</a>
-        <a href="http://franzp.fr/" class="centered">http://franzp.fr/</a>
+        <a href="https://www.cozycloud.cc/" class="centered">https://www.cozycloud.cc/</a>
+        <br><br>
+        <img src="https://avatars2.githubusercontent.com/u/1580287?s=460" alt="Romain Foucault" class="logo" />
+        <a href="https://github.com/aenario" class="centered">GitHub</a>
+        <br>
+        <img src="https://avatars1.githubusercontent.com/u/568111?s=460" alt="Joseph Silvestre" class="logo" />
+        <a href="https://github.com/jsilvestre" class="centered">GitHub</a>
       </div>
       <div class="span8 lead description">
-        <p>Nous parlerons des principes de base du undo et des exemples dans angular.js</p>
+        <h3>Succomber à la hype ReactJS ? (retour d'expérience) [20min] </h3>
+        <p>Une introduction à React, ses concepts, ses plus et ses moins</p>
+
+        <h3>Le Realtime dans Cozy [15min]</h3>
+        <p>Propagation des events du browser à la base de donnée</p>
+
+        <h3>Couverture du code par les tests en JavaSript [5min]</h3>
+        <p>Apprendre en 5 min comment générer un rapport de taux de couverture du code par les tests et comment s'en servir</p>
+
+        <h3>Sortir du Callback Hell [10min]</h3>
+        <p>Callbacks vs Async vs Promise vs Co-Routines</p>
+
+        <h3>Build Tools War [15min]</h3>
+        <p>Comparatif illustré de Grunt, Brunch, Gulp et Broccoli</p>
       </div>
     </div>
   </article>
   <article id="where">
     <h2>Le lieu : Epitech</h2>
-    <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&amp;hl=fr&amp;cid=2934105339601756812">Epitech Lyon, 86 Boulevard Marius Vivier Merle, 69003 Lyon</a>
+    <!--<a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&amp;hl=fr&amp;cid=2934105339601756812">Epitech Lyon, 86 Boulevard Marius Vivier Merle, 69003 Lyon</a>
     <br>
-    <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe>
-    <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed"></iframe>
-    <br />
-    <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a>
-    </small>-->
+    <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe>-->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1391.8549625365572!2d4.856872000000001!3d45.75696099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea653d095dab%3A0x28b80942c48a228c!2sEpitech+Lyon!5e0!3m2!1sfr!2sfr!4v1402154604751" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <!--<br />
+    <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>-->
     <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=2934105339601756812&amp;q=E.P.I.T.E.C.H.+(Ecole+pour+l'Informatique+et+les+nouvelles+Technologies)&amp;gl=FR&amp;hl=fr&amp;t=m&amp;ll=45.754828,4.860764&amp;spn=0.017966,0.025749&amp;z=14&amp;output=embed"></iframe>-->
   </article>
   <article id="previous">
     <h2>Les sessions précédentes</h2>
     <ul>
       <li>
+        <h3>Lundi 12 mai 2014</h3>
+        Oh Shit, I didn't mean to do that! par François Pozat (<a href="https://twitter.com/FranzP">@FranzP</a>, <a href="https://github.com/FranzPoize">GitHub</a> <a href="http://franzp.fr/">http://franzp.fr/</a>)
+      </li>
+      <li>
         <h3>Jeudi 3 avril 2014</h3>
-        AngularJS from scratch par Matthieu Lux (<a href="https://twitter.com/Swiip">@Swiip</a>) et Olivier Huber (<a href="https://twitter.com/olivierhuber">@olivierhuber</a>)
+        <a href="https://github.com/Zenika/angular-from-scratch">AngularJS From Scratch</a> par Matthieu Lux (<a href="https://twitter.com/Swiip">@Swiip</a>) et Olivier Huber (<a href="https://twitter.com/olivierhuber">@olivierhuber</a>)
+        <br>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/jWJqr2YMGq0" frameborder="0" allowfullscreen></iframe>
       </li>
       <li>
         <h3>Mardi 11 février 2014</h3>
         <a href="http://slid.es/rebolon/meteorjs-first-walk">Découverte de MeteoJS</a> par Benjamin Richard (<a href="https://twitter.com/rebolon">@rebolon</a>, <a href="http://about.me/benjamin.richard">Site</a>, <a href="http://t.co/ASbxJSb5Pg">Sources</a>)
+        <br>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/ncLUaIDmCDk" frameborder="0" allowfullscreen></iframe>
       </li>
       <li>
         <h3>Mardi 14 janvier 2014</h3>
         <a href="http://aldream.github.io/presentations/2014-01-14%20-%20JS1K%20Experience%20%28LyonJS%20Conference%29/#/">Retour d'expérience sur JS1K</a> par Benjamin Planche (<a href="https://twitter.com/b_aldream">@b_aldream</a>, <a href="http://aldream.net/">Site</a>, <a href="http://js1k.com/2013-spring/demo/1507">Démo</a>)
+        <br>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/7LImlxILIcQ" frameborder="0" allowfullscreen></iframe>
       </li>
       <li>
         <h3>Mardi 10 décembre 2013</h3>
