--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <ul>
       <li>
         <h3>Mardi 17 Juin 2014</h3>
-        ReactJS, Realtime, Coverage, Callback Hell & Build Tools par CozyCloud (<a href="https://www.cozycloud.cc/" class="centered">https://www.cozycloud.cc/</a>)
+        ReactJS, Realtime, Coverage, Callback Hell & Build Tools par CozyCloud (<a href="https://www.cozycloud.cc/">https://www.cozycloud.cc/</a>)
       </li>
       <li>
         <h3>Lundi 12 mai 2014</h3>
