--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <br>
       <br>--&gt; Mardi 30 Septembre à 19h15 &lt;--
       <br>
+      <a href="http://www.eventbrite.fr/e/billets-lyonjs-24-les-streams-nodejs-par-naholyr-gulp-yeoman-par-swiip-13325014477?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13325014477" alt="Eventbrite - LyonJS #24 Les streams Node.js par @Naholyr / Gulp &amp; Yeoman par @Swiip" /></a>
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-23-reactjs-realtime-coverage-callback-hell-build-tools-par-cozycloud-11891978227?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11891978227" alt="Eventbrite - LyonJS #23 ReactJS, Realtime, Coverage, Callback Hell &amp; Build Tools par CozyCloud" /></a>-->
     </h1>
   </header>
