--- a/index.html
+++ b/index.html
@@ -56,35 +56,33 @@
     <h1>
       <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;">
       <br>
-      <br>--&gt; Mardi 30 Septembre à 19h15 &lt;--
+      <br>--&gt; Mardi 28 Octobre à 19h15 &lt;--
       <br>
-      <a href="http://www.eventbrite.fr/e/billets-lyonjs-24-les-streams-nodejs-par-naholyr-gulp-yeoman-par-swiip-13325014477?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13325014477" alt="Eventbrite - LyonJS #24 Les streams Node.js par @Naholyr / Gulp &amp; Yeoman par @Swiip" /></a>
+      <a href="http://www.eventbrite.fr/e/billets-lyonjs-25-es6-protractor-13795004229?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13795004229" alt="Eventbrite - LyonJS #25 ES6, protractor" /></a>
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-23-reactjs-realtime-coverage-callback-hell-build-tools-par-cozycloud-11891978227?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11891978227" alt="Eventbrite - LyonJS #23 ReactJS, Realtime, Coverage, Callback Hell &amp; Build Tools par CozyCloud" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>Les Streams Node.js par Naholyr<br>Yeoman & Gulp par Swiip</h2>
+    <h2>ES6 par Bruno Heridet<br>Protractor par Nicolas Chaulet</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/3378100451/74315980e9876268b9f4c66ed9dfbb0c_400x400.png" alt="Nicolas Chambrier" class="logo" />
-        <a href="https://twitter.com/naholyr" class="centered">@naholyr</a>
-        <a href="https://github.com/naholyr" class="centered">GitHub</a>
+        <img src="https://pbs.twimg.com/profile_images/42660652/dlp.jpg" alt="Bruno Heridet" class="logo" />
+        <a href="https://twitter.com/Delapouite" class="centered">@Delapouite</a>
+        <a href="https://github.com/Delapouite" class="centered">GitHub</a>
       </div>
       <div class="span8 lead description">
-        <h3>Les Streams Node.js [30min] </h3>
+        <h3>Les nouveautés d'EcmaScript 6 [30-45min] </h3>
       </div>
     </div>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/821941422/swiip_400x400.jpg" alt="Matthieu Lux" class="logo" />
-        <a href="https://twitter.com/Swiip" class="centered">@Swiip</a>
-        <a href="https://github.com/Swiip" class="centered">GitHub</a>
+        <img src="https://pbs.twimg.com/profile_images/3643545493/b3e3d18997f55a63e267757dfd8269e1.jpeg" alt="Nicolas Chaulet" class="logo" />
+        <a href="https://twitter.com/n_chaulet" class="centered">@n_chaulet</a>
+        <a href="https://github.com/nchaulet" class="centered">GitHub</a>
       </div>
       <div class="span8 lead description">
-        <h3>Yeoman & GulpJS [30min]</h3>
-        <p>Yeoman permet de scaffolder des applications Web contenant toutes les bonnes pratiques.</p>
-        <p>Si en plus, ces bonnes pratiques utilisent GulpJS, vous disposez d'un environnement de developement aux petits oignons.</p>
-        <p>Optimisation, preprocessing (Sass), live reload (BrowserSync), tests (Karma), venez voir comment les mettres en oeuvre avec Gulp!</p>
+        <h3>Protractor [30min]</h3>
+        <p>Le framework de test de bout en bout d'Angular.js.</p>
       </div>
     </div>
   </article>
