--- a/index.html
+++ b/index.html
@@ -56,41 +56,29 @@
     <h1>
       <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;">
       <br>
-      <br>--&gt; Mardi 28 Octobre à 19h15 &lt;--
+      <br>--&gt; Mardi 30 Décembre à 19h &lt;--
       <br>
-      <a href="http://www.eventbrite.fr/e/billets-lyonjs-25-es6-protractor-13795004229?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13795004229" alt="Eventbrite - LyonJS #25 ES6, protractor" /></a>
+      <!-- <a href="http://www.eventbrite.fr/e/billets-lyonjs-25-es6-protractor-13795004229?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13795004229" alt="Eventbrite - LyonJS #25 ES6, protractor" /></a> -->
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-23-reactjs-realtime-coverage-callback-hell-build-tools-par-cozycloud-11891978227?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11891978227" alt="Eventbrite - LyonJS #23 ReactJS, Realtime, Coverage, Callback Hell &amp; Build Tools par CozyCloud" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>ES6 par Bruno Heridet<br>Protractor par Nicolas Chaulet</h2>
+    <h2>BeerJS</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/42660652/dlp.jpg" alt="Bruno Heridet" class="logo" />
-        <a href="https://twitter.com/Delapouite" class="centered">@Delapouite</a>
-        <a href="https://github.com/Delapouite" class="centered">GitHub</a>
+        <img src="https://avatars0.githubusercontent.com/u/4584318?v=3&s=200" class="logo" />
       </div>
       <div class="span8 lead description">
-        <h3>Les nouveautés d'EcmaScript 6 [30-45min] </h3>
-      </div>
-    </div>
-    <div class="row-fluid">
-      <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/3643545493/b3e3d18997f55a63e267757dfd8269e1.jpeg" alt="Nicolas Chaulet" class="logo" />
-        <a href="https://twitter.com/n_chaulet" class="centered">@n_chaulet</a>
-        <a href="https://github.com/nchaulet" class="centered">GitHub</a>
-      </div>
-      <div class="span8 lead description">
-        <h3>Protractor [30min]</h3>
-        <p>Le framework de test de bout en bout d'Angular.js.</p>
+        <h3>Discussions autour d'un verre</h3>
       </div>
     </div>
   </article>
   <article id="where">
-    <h2>Le lieu : Epitech</h2>
-    <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&amp;hl=fr&amp;cid=2934105339601756812">Epitech Lyon, 86 Boulevard Marius Vivier Merle, 69003 Lyon</a>
+    <h2>Le lieu : Les BerThoM</h2>
+    <a href="https://www.google.com/maps/place/Les+BerThoM/@45.767139,4.836595,17z/data=!3m1!4b1!4m2!3m1!1s0x47f4eaf93eccbec3:0x17c33caa63bb1b64">Les BerThoM, 24 Rue Pizay, 69001 Lyon</a>
     <br>
-    <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.202142231707!2d4.836595000000001!3d45.767138999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eaf93eccbec3%3A0x17c33caa63bb1b64!2sLes+BerThoM!5e0!3m2!1sfr!2s!4v1419251218334" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <!-- <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe> -->
     <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1391.8549625365572!2d4.856872000000001!3d45.75696099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea653d095dab%3A0x28b80942c48a228c!2sEpitech+Lyon!5e0!3m2!1sfr!2sfr!4v1402154604751" width="100%" height="450" frameborder="0" style="border:0"></iframe>-->
     <!--<br />
     <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>-->
@@ -99,6 +87,12 @@
   <article id="previous">
     <h2>Les sessions précédentes</h2>
     <ul>
+      <li>
+        <h3>Mardi 28 Octobre 2014</h3>
+        ES6 par Bruno Heridet (<a href="https://twitter.com/Delapouite">@Delapouite</a>, <a href="https://github.com/Delapouite">GitHub</a>)
+        <br>
+        Protractor par Nicolas Chaulet (<a href="https://twitter.com/n_chaulet">@n_chaulet</a>, <a href="https://github.com/nchaulet">GitHub</a>)
+      </li>
       <li>
         <h3>Mardi 17 Juin 2014</h3>
         ReactJS, Realtime, Coverage, Callback Hell & Build Tools par CozyCloud (<a href="https://www.cozycloud.cc/">https://www.cozycloud.cc/</a>)
