--- a/index.html
+++ b/index.html
@@ -56,37 +56,54 @@
     <h1>
       <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;">
       <br>
-      <br>--&gt; Mardi 30 Décembre à 19h &lt;--
+      <br>--&gt; Lundi 26 janvier 2015 à 19h15 &lt;--
       <br>
       <!-- <a href="http://www.eventbrite.fr/e/billets-lyonjs-25-es6-protractor-13795004229?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13795004229" alt="Eventbrite - LyonJS #25 ES6, protractor" /></a> -->
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-23-reactjs-realtime-coverage-callback-hell-build-tools-par-cozycloud-11891978227?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11891978227" alt="Eventbrite - LyonJS #23 ReactJS, Realtime, Coverage, Callback Hell &amp; Build Tools par CozyCloud" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>BeerJS</h2>
+    <h2>ReactJS</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://avatars0.githubusercontent.com/u/4584318?v=3&s=200" class="logo" />
+        <img src="https://pbs.twimg.com/profile_images/2647598577/0b66ff3dc67d7f95b59263a6de0dae44_400x400.jpeg" alt="Frédéric Langlade" class="logo" />
+        <a href="https://twitter.com/fredericlb" class="centered">Frédéric Langlade (@fredericlb)</a>
       </div>
       <div class="span8 lead description">
-        <h3>Discussions autour d'un verre</h3>
+        <h3>ReactJS</h3>
+        <p>L'idée de cette présentation est de faire un tour rapide des concepts qui entourent React. On démystifiera d'abord le jargon qui l'entoure (Programmation réactive, FRP, Virtual Dom, Isomorphismes...) afin de voir ce que React a d'original mais aussi plus généralement l'impact que ces concepts ont ou vont avoir sur le dévelopement Front end. On verra ensuite en quoi React peut être utile pour vous. Afin d'illustrer tout ça, on verra ensemble deux/trois exemples pour s'habituer au sur-langage utilisé par la librairie et qui laisse souvent perplexe au premier coup d'oeil.</p>
+
+        <p>On finira sur une ballade dans l'éco-système assez riche qui s'est créé autour de React, en passant par quelques fonctionnalités prévues pour le futur de cette librairie qui sont très utiles mais surtout assez originales.</p>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span4">
+        <img src="https://pbs.twimg.com/profile_images/1792904176/Sans_titre_400x400.jpg" alt="Paul Mougel" class="logo" />
+        <a href="https://twitter.com/Paul_Mougel" class="centered">Paul Mougel (@Paul_Mougel)</a>
+      </div>
+      <div class="span8 lead description">
+        <h3>Lightning Angular Material</h3>
       </div>
     </div>
   </article>
   <article id="where">
-    <h2>Le lieu : Les BerThoM</h2>
-    <a href="https://www.google.com/maps/place/Les+BerThoM/@45.767139,4.836595,17z/data=!3m1!4b1!4m2!3m1!1s0x47f4eaf93eccbec3:0x17c33caa63bb1b64">Les BerThoM, 24 Rue Pizay, 69001 Lyon</a>
+    <h2>Le lieu : Epitech</h2>
+    <!-- <a href="https://www.google.com/maps/place/Les+BerThoM/@45.767139,4.836595,17z/data=!3m1!4b1!4m2!3m1!1s0x47f4eaf93eccbec3:0x17c33caa63bb1b64">Les BerThoM, 24 Rue Pizay, 69001 Lyon</a> -->
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.202142231707!2d4.836595000000001!3d45.767138999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eaf93eccbec3%3A0x17c33caa63bb1b64!2sLes+BerThoM!5e0!3m2!1sfr!2s!4v1419251218334" width="100%" height="450" frameborder="0" style="border:0"></iframe>
-    <!-- <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe> -->
+    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.202142231707!2d4.836595000000001!3d45.767138999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eaf93eccbec3%3A0x17c33caa63bb1b64!2sLes+BerThoM!5e0!3m2!1sfr!2s!4v1419251218334" width="100%" height="450" frameborder="0" style="border:0"></iframe> -->
+    <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe>
     <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1391.8549625365572!2d4.856872000000001!3d45.75696099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea653d095dab%3A0x28b80942c48a228c!2sEpitech+Lyon!5e0!3m2!1sfr!2sfr!4v1402154604751" width="100%" height="450" frameborder="0" style="border:0"></iframe>-->
-    <!--<br />
-    <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>-->
+    <br />
+    <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
     <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=2934105339601756812&amp;q=E.P.I.T.E.C.H.+(Ecole+pour+l'Informatique+et+les+nouvelles+Technologies)&amp;gl=FR&amp;hl=fr&amp;t=m&amp;ll=45.754828,4.860764&amp;spn=0.017966,0.025749&amp;z=14&amp;output=embed"></iframe>-->
   </article>
   <article id="previous">
     <h2>Les sessions précédentes</h2>
     <ul>
+      <li>
+        <h3>Mardi 30 Décembre 2014</h3>
+        BeerJS, discussions autour d'un verre.
+      </li>
       <li>
         <h3>Mardi 28 Octobre 2014</h3>
         ES6 par Bruno Heridet (<a href="https://twitter.com/Delapouite">@Delapouite</a>, <a href="https://github.com/Delapouite">GitHub</a>)
