dynamic content from meetup

--- a/index.html
+++ b/index.html
@@ -52,46 +52,38 @@
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
       <![endif]-->
 
-  <header id="event">
+  <header id="event" >
     <h1>
       <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;">
       <br>
-      <br>--&gt; Lundi 26 janvier 2015 à 19h15 &lt;--
+      <br>--&gt; <span class="date">Pas d'événement Prévu pour le moment</span> &lt;--
       <br>
       <!-- <a href="http://www.eventbrite.fr/e/billets-lyonjs-25-es6-protractor-13795004229?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=13795004229" alt="Eventbrite - LyonJS #25 ES6, protractor" /></a> -->
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-23-reactjs-realtime-coverage-callback-hell-build-tools-par-cozycloud-11891978227?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11891978227" alt="Eventbrite - LyonJS #23 ReactJS, Realtime, Coverage, Callback Hell &amp; Build Tools par CozyCloud" /></a>-->
     </h1>
   </header>
-  <article id="next">
-    <h2>ReactJS</h2>
+  <article id="next" class="notloaded">
+    <h2 class="title"></h2>
     <div class="row-fluid">
-      <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/2647598577/0b66ff3dc67d7f95b59263a6de0dae44_400x400.jpeg" alt="Frédéric Langlade" class="logo" />
-        <a href="https://twitter.com/fredericlb" class="centered">Frédéric Langlade (@fredericlb)</a>
-      </div>
-      <div class="span8 lead description">
-        <h3>ReactJS</h3>
-        <p>L'idée de cette présentation est de faire un tour rapide des concepts qui entourent React. On démystifiera d'abord le jargon qui l'entoure (Programmation réactive, FRP, Virtual Dom, Isomorphismes...) afin de voir ce que React a d'original mais aussi plus généralement l'impact que ces concepts ont ou vont avoir sur le dévelopement Front end. On verra ensuite en quoi React peut être utile pour vous. Afin d'illustrer tout ça, on verra ensemble deux/trois exemples pour s'habituer au sur-langage utilisé par la librairie et qui laisse souvent perplexe au premier coup d'oeil.</p>
+      <div class="span4" style="text-align:center">
+  <a class="link">    
+  <h1>Register on</h1>
 
-        <p>On finira sur une ballade dans l'éco-système assez riche qui s'est créé autour de React, en passant par quelques fonctionnalités prévues pour le futur de cette librairie qui sont très utiles mais surtout assez originales.</p>
-      </div>
-    </div>
-    <div class="row-fluid">
-      <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/1792904176/Sans_titre_400x400.jpg" alt="Paul Mougel" class="logo" />
-        <a href="https://twitter.com/Paul_Mougel" class="centered">Paul Mougel (@Paul_Mougel)</a>
+      <img src="img/meetup.png" alt="LyonJS" >
+</a>
+      <!--  <img src="https://pbs.twimg.com/profile_images/2647598577/0b66ff3dc67d7f95b59263a6de0dae44_400x400.jpeg" alt="Frédéric Langlade" class="logo" />
+        <a href="https://twitter.com/fredericlb" class="centered">Frédéric Langlade (@fredericlb)</a>-->
       </div>
       <div class="span8 lead description">
-        <h3>Lightning Angular Material</h3>
       </div>
     </div>
   </article>
-  <article id="where">
-    <h2>Le lieu : Epitech</h2>
+  <article id="where" class="notloaded">
+    <h2 class="name">Le lieu : Epitech</h2>
     <!-- <a href="https://www.google.com/maps/place/Les+BerThoM/@45.767139,4.836595,17z/data=!3m1!4b1!4m2!3m1!1s0x47f4eaf93eccbec3:0x17c33caa63bb1b64">Les BerThoM, 24 Rue Pizay, 69001 Lyon</a> -->
     <br>
     <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.202142231707!2d4.836595000000001!3d45.767138999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eaf93eccbec3%3A0x17c33caa63bb1b64!2sLes+BerThoM!5e0!3m2!1sfr!2s!4v1419251218334" width="100%" height="450" frameborder="0" style="border:0"></iframe> -->
-    <iframe src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <iframe  class="map" width="100%" height="450" frameborder="0" style="border:0" ></iframe>
     <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1391.8549625365572!2d4.856872000000001!3d45.75696099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea653d095dab%3A0x28b80942c48a228c!2sEpitech+Lyon!5e0!3m2!1sfr!2sfr!4v1402154604751" width="100%" height="450" frameborder="0" style="border:0"></iframe>-->
     <br />
     <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
@@ -568,6 +560,28 @@
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>-->
-</body>
+    <script type="text/javascript">
+    var Days = [ "Dimanche" , "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi" ];
+    var Months = [ "janvier" , "février", "mars", "avril", "mai", "juin","juillet", "aout","septembre", "octobre", "novembre", "décembre" ];
+    var url = "https://api.meetup.com/2/events?group_urlname=LyonJS&page=1&sig_id=145819132&sig=5611252fcbd2a6255354102b4d26041a9e5a6f41&_=1426671317683&callback=?";
+    $.ajax( { dataType:"json" , url : url , success: function(data, status, req){
+        if(data && data.results && data.results[0] ) {
+        var event = data.results[0];
+        var d = new Date(event.time);
+        var dateString = Days[d.getDay()] + ' '+ d.getDate() + ' ' + Months[d.getMonth()] + ' ' +  (1900+d.getYear()) +  ' à ' + d.getHours() +':' +d.getMinutes();
+        $("#event .date").html( dateString);
+        $("#next .title").html( event.name);
+        $("#next .link").attr('href' ,  event.event_url);
+        $("#next .description").html( event.description);
+        $("#where .name").html( "Le lieu : " + event.venue.name);
 
+        $(".notloaded").removeClass('notloaded');
+        var mapurl = "http://maps.google.fr/maps?f=q&source=s_q&hl=fr&ie=UTF8&z=14&output=embed";
+        mapurl += "&q="+ event.venue.address_1 +','+event.venue.city;
+        $("#where .map").attr("src", mapurl);
+
+        }} });
+
+</script>
+</body>
 </html>
