--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://pbs.twimg.com/profile_images/1052261856/avatar_mw_large.png" alt="Christophe Porteneuve" class="logo">
+            <img src="https://pbs.twimg.com/profile_images/620269388109873153/aR__hlVF_400x400.jpg" alt="Christophe Porteneuve" class="logo">
           </div>
           <div class="span8">
             <h3>Christophe Porteneuve</h3>
@@ -413,7 +413,7 @@
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://pbs.twimg.com/profile_images/821941422/swiip.jpg" alt="Matthieu Lux" class="avatar size128">
+            <img src="https://pbs.twimg.com/profile_images/565813885815369729/WwYOmeaE_400x400.jpeg" alt="Matthieu Lux" class="avatar size128">
           </div>
           <div class="span8">
             <h3>Matthieu Lux
