Automate events rendering; WIP

--- a/index.html
+++ b/index.html
@@ -93,22 +93,8 @@
     <h2>Les sessions précédentes</h2>
     <ul>
       <li>
-        <h3>Lundi 21 Septembre 2015</h3>
-        ApéroJS / AG LyonJS
-      </li>
-      <li>
-        <h3>Mardi 28 Avril 2015</h3>
-        WebGL par Benjamin Guignabert (<a href="https://twitter.com/euphoben">@euphoben</a>)
-        <br>
-        Treeline.io - Ta grand mère fait des APIs par Calig0ne (<a href="https://twitter.com/Calig0ne">@Calig0ne</a>)
-      </li>
-      <li>
-        <h3>Mardi 24 Mars 2015</h3>
-        Live coding React / Flux Isomorphique par Nicolas Cuillery (<a href="https://twitter.com/ncuillery">@ncuillery</a>)
-      </li>
-      <li>
-        <h3>Lundi 23 Février 2015</h3>
-        LumX par <a href="https://twitter.com/thagou">@thagou</a>
+        <h3>Date</h3>
+        topic || talks
       </li>
       <li>
         <h3>Lundi 26 Janvier 2015</h3>
