feat: add last sesssion on Angular 2

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
     <h2>Les sessions précédentes</h2>
     <ul>
       <li>
+        <h3>Mercredi 21 Octobre 2015</h3>
+          Angular 2 par Emmanuel Demey (<a href="https://twitter.com/emmanueldemey">@EmmanuelDemey</a>)
+      </li>
+      <li>
         <h3>Lundi 21 Septembre 2015</h3>
         ApéroJS / AG LyonJS
       </li>
